--- a/src/ToDo/ToDo.module.scss
+++ b/src/ToDo/ToDo.module.scss
@@ -1,6 +1,7 @@
-@mixin bRad($br){
+@mixin bRad($br) {
 	border-radius: $br
 }
+
 $shad: 0 1px 4px rgba(0, 0, 0, .3),
 -23px 0 20px -23px rgba(0, 0, 0, .6),
 23px 0 20px -23px rgba(0, 0, 0, .6),
@@ -91,6 +92,8 @@ inset 0 0 40px rgba(0, 0, 0, .1);
 				margin-bottom: 1rem;
 				cursor: pointer;
 				color: white;
+
+
 				&:hover {
 					background: rgba(0, 0, 0, .2);
 					color: black;
@@ -114,6 +117,7 @@ inset 0 0 40px rgba(0, 0, 0, .1);
 				.taskName {
 					text-align: left;
 					padding: 0.2rem 0.6rem;
+					font-weight: bold;
 				}
 
 				.task {
@@ -126,40 +130,69 @@ inset 0 0 40px rgba(0, 0, 0, .1);
 					border-bottom-left-radius: 0.5rem;
 					border-bottom-right-radius: 0.5rem;
 
+					.areaWrapper {
+
+
+						.area {
+              max-width: 20rem;
+							max-height: 10rem;
+
+							@media screen and (max-width: 520px) {
+								max-width: 15rem;
+								max-height: 7rem;
+							}
+							@media screen and (max-width: 520px) {
+								max-width: 10rem;
+								max-height: 4rem;
+							}
+							@media screen and (max-width: 350px) {
+								max-width: 6rem;
+								max-height: 2rem;
+							}
+						}
+
+					}
+
+
 					.inputWrapper {
-						border: 4px solid black;
 						@include bRad (0.5rem);
 						outline: none;
-
+						&:hover {
+							background: rgba(0, 0, 0, .1);
+						}
 
 						.taskStatus {
 							display: inline-block;
 							zoom: 2;
 							cursor: pointer;
 						}
-
-						.taskStatus:hover {
-						}
 					}
-
-					.inputWrapper:hover {
-						background: rgba(0, 0, 0, .1);
-					}
-
 
 					.taskDescription {
 						display: block;
 						font-style: italic;
+						text-decoration: underline;
 					}
+
+					.taskDescription.taskDescriptionOff {
+						text-decoration: line-through;
+					}
+
+					.closeEdit {
+						color: red;
+						font-weight: bold;
+						margin-left: 0.5rem;
+					}
+
 
 					.taskEdit {
 						display: flex;
 						padding: 0.5rem;
 						@include bRad (0.5rem);
 						outline: none;
-						border: 4px solid black;
 						font-weight: bold;
 						cursor: pointer;
+
 						&:hover {
 							background: rgba(0, 0, 0, .1);
 						}
@@ -200,6 +233,7 @@ inset 0 0 40px rgba(0, 0, 0, .1);
 					outline: none;
 					margin-right: 0.5rem;
 					cursor: pointer;
+
 					&:hover {
 						background: rgba(0, 0, 0, .1);
 					}
