--- a/src/ToDo/ToDo.module.scss
+++ b/src/ToDo/ToDo.module.scss
@@ -178,10 +178,18 @@ inset 0 0 40px rgba(0, 0, 0, .1);
 						.fieldEditMode {
 							font-size: 0.8rem;
 						}
+						.fieldEditMode.error {
+							color: red;
+						}
+
 
 						.editName {
 							@include bRad (0.5rem);
 							padding: 3px;
+							border: 1px solid black;
+						}
+						.editName.error {
+							border: 1px solid red;
 						}
 
 						.date, .name {
@@ -210,8 +218,11 @@ inset 0 0 40px rgba(0, 0, 0, .1);
 						.areaWrapper {
 							max-width: 100%;
 
-							.areadEditMode {
+							.areaEditMode {
 								font-size: 0.8rem;
+							}
+							.areaEditMode.error {
+								color: red;
 							}
 
 							.area {
@@ -219,6 +230,7 @@ inset 0 0 40px rgba(0, 0, 0, .1);
 								@include bRad (0.5rem);
 								box-shadow: $shad;
 								resize: none;
+								border: 1px solid black;
 
 
 								@media screen and (max-width: 600px) {
@@ -249,6 +261,9 @@ inset 0 0 40px rgba(0, 0, 0, .1);
 									max-width: 5rem;
 									max-height: 2rem;
 								}
+							}
+							.area.error {
+								border: 1px solid red;
 							}
 
 						}
