--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -1,4 +1,34 @@
 .appWrapper {
   text-align: center;
   font-size: 100%;
+  max-width: 1200px;
+  margin: 0 auto;
+
+
+  .headerWrapper {
+
+
+  }
+
+
+  .contentWrapper {
+    margin-left: 9.5rem;
+    margin-right: 0.5rem;
+    max-width: 65rem;
+
+
+  }
+  @media screen and (max-width: 650px) {
+    .contentWrapper {
+      margin: 0 auto;
+    }
+  }
+
+
+  .footerWrapper {
+
+
+
+  }
+
 }
